# nRF5x-Biosensing-Boards

./: .gitignore  LICENSE  README.md
CAD/: BC840M+ADS131.xlsx  BC840M+ADS131_BOM.xls  BC840M+ADS131_BOM.xlsx  BC840M.b#1  BC840M.brd  BC840M.cam  BC840M.sch  BC840M_LeftStrap.brd  BC840M_centroid.csv  BM832A.brd  BM832A.sch  BT832A.brd  BT832A.cam  BT832A.sch  BT832A_centroid.csv
CAD/BC40M/: .~lock.1.25mm_BC40M+ADS131_BOM.xls#  1.25mm_BC40M+ADS131_BOM.xls  BC40M_nrf53.b#1  BC40M_nrf53.b#2  BC40M_nrf53.brd  BC40M_nrf53.s#1  BC40M_nrf53.sch  BC840M+ADS131_BOM.xls
CAD/BC840M/: .~lock.BC840M+ADS131_BOM.xls#  1.25mm_BC840M+ADS131_BOM.xls  BC840M.b#1  BC840M.brd  BC840M.sch  BC840M_1.25mm_headers.brd  BC840M_1.27mm_headers.sch  BC840M_RightStrap.brd  BC840M_RightStrap.sch  README.md
CAD/BC840M_SLIM/: BC840M.brd  BC840M.sch
CAD/BM833/: 1.25mm_BT840+ADS131_BOM.xls  BM833.brd  BM833.lbr  BM833.sch  WIP.md
CAD/BT-series/: .~lock.BT840+ADS131_BOM.xls#  BT40+ADS131_BOM.xlsx  BT840+ADS131_BOM.xls  BT840_1.25mm_headers.brd  BT840_1.25mm_headers.sch  BT840_1.27mm_headers.brd  BT840_1.27mm_headers.sch  BT840_1.27mm_headers_centroid.csv  README.md
CAD/BT832_OLD/: README.txt
CAD/CAMOutputs/: BT832A_centroid.csv
CAD/CP2012_20Pin/: BT832 BOM.xlsx  BT832A.brd  BT832A_centroid.csv
CAD/CP2102_24Pin/: BT832A.brd
CAD/libraries/: 16pos1.27mm.lbr  2021-06-18_06-38-40_Library.scr  2021-11-12_20-01-15_Library.scr  BC840M.lbr  BCM857BS.lbr  BM02B-ACHSS-GAN-TF.lbr  BM832.lbr  BQ24072RGTR.lbr  BT840.lbr  CL-SB-12B-01T.lbr  CP2102N-A02-GQFN20R.lbr  DX4R005JJ2R1800.lbr  S2B-PH-SM4-TB_LF__SN_.lbr  S2B-ZR-SM4A-TF_LF__SN_.lbr  SM02B-SRSS-TB_LF__SN_.lbr  TPD4S012DRYR.lbr  ads131qfn.lbr  pinhead+.lbr
Firmware/: CMakeLists.txt  README.md  ble_test.html  nrf52840dk_nrf52840.overlay  prj.conf
Firmware/cpuapp/: Kconfig  prj.conf  (+1 more)
Firmware/nrf5340/RP2040/App/: ALL_BUILD.vcxproj  App.sln  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  main.uf2
Firmware/nrf5340/RP2040/App/binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  App.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.uf2
Firmware/nrf5340/RP2040/App/binaries/main/: cmake_install.cmake  main.vcxproj  main.vcxproj.filters
Firmware/nrf5340/RP2040/App/main/: CMakeLists.txt  cmake_install.cmake  main.cpp  main.vcxproj  main.vcxproj.filters  pwmcontroller.cpp  pwmcontroller.hpp  uartcontroller.cpp  uartcontroller.hpp
Firmware/nrf5340/cpuapp/: .gitignore  CMakeLists.txt  Kconfig  README.md  ble_test.html  nrf5340dk_nrf5340.overlay  prj.conf  prj.conf.bak
Firmware/nrf5340/cpuapp/dts/bindings/: joshua,ads131m08-spi.yaml  joshua,max30102-i2c.yaml  vendor-prefixes.txt
Firmware/nrf5340/cpuapp/include/: ADS131M08_zephyr.hpp  audio_module.hpp  ble_commands.hpp  ble_gatt.hpp  ble_service.hpp  ble_types.hpp  dmic_module.hpp  max30102.hpp  mpu6050.hpp  qmc5883l.hpp  serial_controller.hpp  usb_comm_handler.hpp
Firmware/nrf5340/cpuapp/include/Transports/: i2c_transport.hpp  spi_transport.hpp
Firmware/nrf5340/cpuapp/src/: ADS131M08_zephyr.cpp  audio_module.cpp  ble_gatt.cpp  ble_service.cpp  bme280.cpp  main.cpp  max30102.cpp  mpu6050.cpp  serial_controller.cpp  tlc5940.cpp  usb_comm_handler.cpp
Firmware/nrf5340/cpuapp/src/bugs/: gpio_devices.cpp  led_testing.cpp
Firmware/nrf5340/cpuapp_zephyrV3/: CMakeLists.txt  Kconfig  README.md  nrf5340dk_nrf5340.overlay  prj.conf
Firmware/nrf5340/cpuapp_zephyrV3/dts/bindings/: joshua,audiomodule-i2s.yaml
Firmware/nrf5340/cpuapp_zephyrV3/include/: ble_gatt.hpp  ble_types.hpp  bme280.hpp  commandid.hpp  mpu6050.hpp  sensor_id.hpp  tlc5940.hpp  usb_comm_handler.hpp
Firmware/nrf5340/cpuapp_zephyrV3/include/Transports/: spi_transport.hpp
Firmware/nrf5340/cpuapp_zephyrV3/lib/ADS131M08_Arduino/: ads131m08_test.ino
Firmware/nrf5340/cpuapp_zephyrV3/src/: ADS131M08_zephyr.cpp  audio_module.cpp  ble_gatt.cpp  dmic_module.cpp  main.cpp.bak  max30102.cpp  mpu6050.cpp  qmc5883l.cpp  tlc5940.cpp
(+265 files in other folders)
